Add cursor pointer to settings icon

--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -175,6 +175,7 @@ a.UserLanding-sidebar-channel-name {
 
 .user-gear {
 	font-size: 16px;
+	cursor: pointer;
 }
 
 .UserLanding-sidebar-channel-user-home,
