--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -81,6 +81,11 @@
   margin-right: 16px;
 }
 
+.Navigation-login:hover {
+  cursor: pointer;
+  box-shadow: 0 8px 15px rgb(0 0 0 / 20%);
+}
+
 .MenuModal-logo-container {
   display: flex;
   flex-direction: row;
