--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -4,7 +4,8 @@
 	background-color: rgb(48, 49, 54);
 	height: 100%;
 	width: 230px;
-	overflow: hidden;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .join-server-div {
@@ -47,7 +48,6 @@
 	background-color: #36393f;
 	box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
 		0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
-
 }
 
 .total-members {
@@ -84,13 +84,12 @@
 } */
 
 .nicknames {
-    font-size: 15px;
+	font-size: 15px;
 }
 
 .individual-person button {
 	font-size: 15px;
 	color: rgb(25, 188, 155);
-	background-color: rgb(48, 49, 54);
 	border: none;
 }
 
@@ -111,7 +110,6 @@
 #pending.individual-person button {
 	color: white;
 }
-
 
 #owner.individual-person button:hover {
 	/* color: rgb(103, 223, 147); */
@@ -176,7 +174,6 @@
 	padding: 0 5px;
 	object-fit: cover;
 }
-
 
 .pending {
 	filter: brightness(0.5);
