--- a/react-app/src/components/Servers/ServerIndex/ServerIndex.css
+++ b/react-app/src/components/Servers/ServerIndex/ServerIndex.css
@@ -1,144 +1,148 @@
 .explorer-container {
-  display: flex;
-  flex-direction: column;
-  width: 95%;
+	display: flex;
+	flex-direction: column;
+	width: 95%;
 }
 
 .servers-icon {
-  height: 50px;
-  width: 50px;
-  border-radius: 25%;
-  border: 5px solid #292b2f;
-  object-fit: cover;
+	height: 50px;
+	width: 50px;
+	border-radius: 25%;
+	border: 5px solid #292b2f;
+	object-fit: cover;
 }
 
 .explorer-img {
-  height: auto;
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
-  border-radius: 9px;
+	height: auto;
+	width: 100%;
+	max-height: 400px;
+	object-fit: cover;
+	border-radius: 9px;
 }
 
 .explorer-banner-container {
-  margin: 15px 10px;
-  /* width: 100%; */
+	margin: 15px 10px;
+	/* width: 100%; */
 }
 
 .explorer-banner-header {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 15px 10px;
+	font-size: 18px;
+	font-weight: bold;
+	margin: 15px 10px;
 }
 
 .exp-link {
-  /* margin: auto; */
-  cursor: pointer;
+	/* margin: auto; */
+	cursor: pointer;
 }
 
 .exp-link:hover {
-  color: rgb(255, 121, 121);
+	color: rgb(255, 121, 121);
 }
 
 .exp-bk {
-  width: 100%;
-  /* height: 100%; */
-  background-color: rgba(0, 0, 0, 0.866);
-  color: white;
-  display: flex;
-  flex-direction: row;
+	width: 100%;
+	/* height: 100%; */
+	background-color: rgba(0, 0, 0, 0.866);
+	color: white;
+	display: flex;
+	flex-direction: row;
 }
 
 .explorer-banner-server-container {
-  margin: 15px 10px;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  word-wrap: break-word;
+	margin: 15px 10px;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	word-wrap: break-word;
 }
 
 .explorer-server-container {
-  position: relative;
-  /* border: 1px solid white; */
-  background-color: #292b2f;
-  border-radius: 5px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  width: 350px;
-  height: 280px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transition: 0.5s;
+	position: relative;
+	/* border: 1px solid white; */
+	background-color: #292b2f;
+	border-radius: 5px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	width: 350px;
+	height: 280px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	transition: 0.5s;
 }
 
 .explorer-server-container:hover {
-  background-color: #34363b;
+	background-color: #34363b;
 }
 
 .explorer-server-description {
-  display: flex;
-  text-align: center;
+	display: flex;
+	text-align: center;
 }
 
 .explorer-server-top {
-  display: flex;
-  /* align-items: center; */
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  justify-content: center;
-  background: linear-gradient(
-    140deg,
-    rgba(145, 173, 159, 1) 0%,
-    rgba(60, 70, 78, 1) 100%
-  );
+	display: flex;
+	/* align-items: center; */
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	justify-content: center;
+	background: linear-gradient(
+		140deg,
+		rgba(145, 173, 159, 1) 0%,
+		rgba(60, 70, 78, 1) 100%
+	);
 
-  margin-bottom: 30px;
-  height: 100px;
-  width: 100%;
+	margin-bottom: 30px;
+	height: 100px;
+	width: 100%;
 }
 
 .explorer-server-img {
-  position: absolute;
-  bottom: 155px;
+	position: absolute;
+	bottom: 155px;
 }
 
 .explorer-server-name {
-  color: white;
-  font-weight: bold;
-  font-size: 14px;
-  display: flex;
-  flex-direction: row;
+	color: white;
+	font-weight: bold;
+	font-size: 14px;
+	display: flex;
+	flex-direction: row;
 }
 
 .check {
-  color: green;
-  margin-right: 5px;
+	color: green;
+	margin-right: 5px;
 }
 
 .explorer-server-description {
-  color: #b6b6b6;
-  font-size: 12px;
-  margin-top: 10px;
-  height: 10%;
+	color: #b6b6b6;
+	font-size: 12px;
+	margin-top: 10px;
+	height: 10%;
 }
 
 .join-server {
-  text-transform: uppercase;
-  font-size: 11px;
-  font-weight: bold;
-  margin-top: 55px;
-  color: rgb(55, 137, 231);
-  transition: 0.5s;
+	text-transform: uppercase;
+	font-size: 11px;
+	font-weight: bold;
+	margin-top: 55px;
+	color: rgb(55, 137, 231);
+	transition: 0.5s;
 }
 
 .join-server:hover {
-  color: rgb(109, 214, 255);
+	color: rgb(109, 214, 255);
 }
 
 .already-joined {
-  text-transform: uppercase;
-  font-size: 20px;
-  margin-top: 50px;
+	text-transform: uppercase;
+	font-size: 20px;
+	margin-top: 50px;
+}
+
+.pointer {
+	cursor: pointer;
 }
