--- a/react-app/src/forms.css
+++ b/react-app/src/forms.css
@@ -1,156 +1,159 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;900&family=Roboto:wght@300;400&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700;900&family=Roboto:wght@300;400&display=swap");
 
 .Form-wrapper {
-    width: 100%;
-    height: 100vh;
-    font-family: Roboto;
-    padding: 0px 16px;
+	width: 100%;
+	height: 100vh;
+	font-family: Roboto;
+	padding: 0px 16px;
 }
 
 .Form-container {
-    width: 100%;
-    height: 100%;
-    background-color: #36393f;
-    color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 0px;
-
+	width: 100%;
+	height: 100%;
+	background-color: #36393f;
+	color: #ffffff;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px 0px;
 }
 
 .Form-logo {
-    height: 34px;
-    margin-bottom: 16px;
+	height: 34px;
+	margin-bottom: 16px;
 }
 
 .Form-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .Form-title {
-    margin-bottom: 8px;
-    font-size: 24px;
-    color: #ffffff;
-    font-weight: 500;
-    /* font-family: Roboto; */
+	margin-bottom: 8px;
+	font-size: 24px;
+	color: #ffffff;
+	font-weight: 500;
+	/* font-family: Roboto; */
 }
 
 .LoginForm-subtext {
-    font-size: 15px;
-    color: #b9bbbe;
-    font-family: Roboto;
-    font-weight: 400;
+	font-size: 15px;
+	color: #b9bbbe;
+	font-family: Roboto;
+	font-weight: 400;
 }
 
 .Form-form-container {
-    width: calc(100% - 32px);
+	width: calc(100% - 32px);
 }
 
 .Form-form {
-    width: 100%;
-    margin-top: 20px;
+	width: 100%;
+	margin-top: 20px;
 }
 
 .Form-form-group {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .Form-form-group > label {
-    color: #b9bbbe;
-    margin-bottom: 8px;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 700;
+	color: #b9bbbe;
+	margin-bottom: 8px;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 700;
 }
 
 .Form-form-group > input {
-    height: 20px;
-    padding: 10px;
-    color: #ffffff;
-    font-size: 16px;
-    border-radius: 3px;
-    border: none;
-    background-color: #1f2225;
+	height: 20px;
+	padding: 10px;
+	color: #ffffff;
+	font-size: 16px;
+	border-radius: 3px;
+	border: none;
+	background-color: #1f2225;
 }
 
 .Form-error-container {
-    height: 20px;
-    display: flex;
-    align-items: center;
+	height: 20px;
+	display: flex;
+	align-items: center;
 }
 
-.Form-error, .Form-required {
-    font-size: 12px;
-    color: #ed4245;
+.Form-error,
+.Form-required {
+	font-size: 12px;
+	color: #ed4245;
 }
 
 .Form-required {
-    font-family: Roboto;
-    vertical-align: top;
-    margin-left: 4px;
+	font-family: Roboto;
+	vertical-align: top;
+	margin-left: 4px;
 }
 
 .Form-button-container {
-    width: 100%;
+	width: 100%;
 }
 
 .Form-submit-button {
-    width: 100%;
-    height: 44px;
-    color: #ffffff;
-    font-size: 16px;
-    font-family: Roboto;
-    background-color: #5865f2;
-    border: none;
-    border-radius: 3px;
-    padding: 2px 16px;
-    margin: 20px 0px 8px 0px;
+	width: 100%;
+	height: 44px;
+	color: #ffffff;
+	font-size: 16px;
+	font-family: Roboto;
+	background-color: #5865f2;
+	border: none;
+	border-radius: 3px;
+	padding: 2px 16px;
+	margin: 20px 0px 8px 0px;
 }
 
 .Form-small-text {
-    color: #b9bbbe;
-    font-size: 12px;
+	color: #b9bbbe;
+	font-size: 12px;
 }
 
 .Form-link {
-    margin-left: 4px;
-    color: #00aff4;
+	margin-left: 4px;
+	color: #00aff4;
+	cursor: pointer;
+}
+.Form-link:hover {
+	text-decoration: underline;
 }
 
 @media (min-width: 468px) {
-    .Form-logo {
-        display: none;
-    }
+	.Form-logo {
+		display: none;
+	}
 
-    .Form-wrapper {
-        /* background-color: #5865f2; */
-        background-image: url("https://keenlychung.com/images/datcord_bg.svg");
-        background-size: cover;
-        /* background-repeat: no-repeat; */
-        padding: 0;
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-    }
+	.Form-wrapper {
+		/* background-color: #5865f2; */
+		background-image: url("https://keenlychung.com/images/datcord_bg.svg");
+		background-size: cover;
+		/* background-repeat: no-repeat; */
+		padding: 0;
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		overflow: hidden;
+	}
 
-    .Form-container {
-        padding: 32px;
-        width: 100%;
-        max-width: 480px;
-        height: max-content;
-        border-radius: 5px;
-        box-sizing: border-box;
-        box-shadow: 0px 2px 10px 0px rgba( 0, 0, 0, 0.2);
-    }
+	.Form-container {
+		padding: 32px;
+		width: 100%;
+		max-width: 480px;
+		height: max-content;
+		border-radius: 5px;
+		box-sizing: border-box;
+		box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
+	}
 }
+
