--- a/react-app/src/components/MainPage/MainPage.css
+++ b/react-app/src/components/MainPage/MainPage.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+	background-color: #36393f;
   /* overflow-y: hidden; */
   /* box-sizing: border-box; */
 }
