--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -33,7 +33,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	background-color: #36393f;
+	/* background-color: #36393f; */
 }
 
 /* width */
