--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -1,79 +1,80 @@
 .server-members-div {
-	display: flex;
-	flex-direction: column;
-	background-color: rgb(48, 49, 54);
-	height: calc(100% - 46px);
-	/* height: 100%; */
-	width: 230px;
-	overflow-y: scroll;
-	overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(48, 49, 54);
+  height: calc(100% - 46px);
+  /* height: 100%; */
+  width: 230px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .ServerMember-sidebar {
-	width: 230px;
-	height: 100vh;
-	box-sizing: border-box;
-	background-color: #303136;
-	display: flex;
-	flex-direction: column;
+  width: 230px;
+  height: 100vh;
+  box-sizing: border-box;
+  background-color: #36393f;
+  display: flex;
+  flex-direction: column;
 }
 
 .ServerMember-content {
-	height: calc(100% - 48px);
-	width: 230px;
-	overflow-y: auto;
+  background-color: #303136;
+  height: calc(100% - 48px);
+  width: 230px;
+  overflow-y: auto;
 }
 
 .join-server-div {
-	background-color: rgb(60, 68, 165);
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 5px 0;
+  background-color: rgb(60, 68, 165);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 0;
 }
 
 .join-text {
-	color: white;
-	font-size: 12px;
-	padding-right: 5px;
+  color: white;
+  font-size: 12px;
+  padding-right: 5px;
 }
 
 .join-server-button {
-	background-color: rgb(60, 68, 165);
-	color: white;
-	border: 1.5px solid white;
-	font-size: 12px;
-	padding: 3px 7px;
-	margin: 3px;
-	border-radius: 3px;
-	overflow: hidden;
+  background-color: rgb(60, 68, 165);
+  color: white;
+  border: 1.5px solid white;
+  font-size: 12px;
+  padding: 3px 7px;
+  margin: 3px;
+  border-radius: 3px;
+  overflow: hidden;
 }
 
 .server-members-header {
-	width: 100%;
-	height: 48px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 12px 16px;
-	/* margin-top: 5px; */
-	box-sizing: border-box;
-	border-bottom: 1px;
-	color: #ffffff;
-	box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
-		0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
+  width: 100%;
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 16px;
+  /* margin-top: 5px; */
+  box-sizing: border-box;
+  border-bottom: 1px;
+  color: #ffffff;
+  box-shadow: 0 1px 0 hsl(240 11.1% 1.8% / 0.2),
+    0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
 }
 
 .total-members {
-	font-size: 15px;
-	/* width: calc(100% - 20px); */
-	color: rgba(211, 212, 214, 0.8);
-	padding-top: 15px;
-	padding-bottom: 10px;
-	padding-left: 5px;
-	margin: 0;
+  font-size: 15px;
+  /* width: calc(100% - 20px); */
+  color: rgba(211, 212, 214, 0.8);
+  padding-top: 15px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  margin: 0;
 }
 
 /* h2 {
@@ -101,124 +102,124 @@
 } */
 
 .nicknames {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 .individual-person button {
-	font-size: 15px;
-	color: rgb(25, 188, 155);
-	border: none;
+  font-size: 15px;
+  color: rgb(25, 188, 155);
+  border: none;
 }
 
 #owner.individual-person button {
-	/* color: rgb(103, 223, 147); */
-	color: rgb(25, 188, 155);
+  /* color: rgb(103, 223, 147); */
+  color: rgb(25, 188, 155);
 }
 
 #admin.individual-person button {
-	/* color: rgb(103, 223, 147); */
-	color: rgb(25, 188, 155);
+  /* color: rgb(103, 223, 147); */
+  color: rgb(25, 188, 155);
 }
 
 #member.individual-person button {
-	color: rgb(196, 122, 228);
+  color: rgb(196, 122, 228);
 }
 
 #pending.individual-person button {
-	color: white;
+  color: white;
 }
 
 #owner.individual-person button:hover {
-	/* color: rgb(103, 223, 147); */
-	color: rgb(25, 188, 155);
-	background-color: #3f434a;
+  /* color: rgb(103, 223, 147); */
+  color: rgb(25, 188, 155);
+  background-color: #3f434a;
 }
 
 #admin.individual-person button:hover {
-	/* color: rgb(103, 223, 147); */
-	color: rgb(25, 188, 155);
-	background-color: #3f434a;
+  /* color: rgb(103, 223, 147); */
+  color: rgb(25, 188, 155);
+  background-color: #3f434a;
 }
 
 #member.individual-person button:hover {
-	color: rgb(196, 122, 228);
-	background-color: #3f434a;
+  color: rgb(196, 122, 228);
+  background-color: #3f434a;
 }
 
 #pending.individual-person button:hover {
-	color: white;
-	background-color: #3f434a;
+  color: white;
+  background-color: #3f434a;
 }
 
 .individual-person button:hover {
-	background-color: #3f434a;
-	filter: brightness(1);
-	cursor: pointer;
+  background-color: #3f434a;
+  filter: brightness(1);
+  cursor: pointer;
 }
 
 .visible {
-	position: absolute;
-	right: 100px;
+  position: absolute;
+  right: 100px;
 }
 
 .hidden {
-	display: none;
+  display: none;
 }
 
 .section {
-	padding: 5px 0;
+  padding: 5px 0;
 }
 
 .individual-person {
-	padding: 5px 0;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	border-radius: 5px;
-	width: 100%;
+  padding: 5px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 5px;
+  width: 100%;
 }
 
 .individual-person:hover {
-	background-color: #3f434a;
-	filter: brightness(1);
-	cursor: pointer;
+  background-color: #3f434a;
+  filter: brightness(1);
+  cursor: pointer;
 }
 
 .member-img {
-	border-radius: 50%;
-	height: 35px;
-	width: 35px;
-	padding: 0 5px;
-	object-fit: cover;
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  padding: 0 5px;
+  object-fit: cover;
 }
 
 .pending {
-	filter: brightness(0.5);
+  filter: brightness(0.5);
 }
 
 .server-owner-crown {
-	height: 12px;
-	padding-top: 2px;
-	padding-left: 5px;
+  height: 12px;
+  padding-top: 2px;
+  padding-left: 5px;
 }
 
 .owner-div.section,
 .admin-div.section,
 .regular-members-div.section,
 .pending-div.section {
-	padding-left: 5px;
-	width: calc(100% - 10px);
+  padding-left: 5px;
+  width: calc(100% - 10px);
 }
 
 .ServerMembers-headers {
-	width: 100%;
-	padding-left: 5px;
-	padding-bottom: 3px;
-	font-size: 12px;
-	color: rgb(211, 212, 214, 0.8);
+  width: 100%;
+  padding-left: 5px;
+  padding-bottom: 3px;
+  font-size: 12px;
+  color: rgb(211, 212, 214, 0.8);
 }
 
 h2 {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
