--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -24,40 +24,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;900&family=Roboto:wght@300;400&display=swap");
 
 * {
-	font-family: "Noto Sans", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .App-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	/* background-color: #36393f; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  /* background-color: #36393f; */
 }
 
 /* width */
 ::-webkit-scrollbar {
-	width: 8px;
-	background-color: #202225;
+  width: 8px;
+  background-color: transparent;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background-color: transparent;
+  /* background-color: #202225; */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #888;
-	border-radius: 5px;
+  background: #202225;
+  border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #555;
+  background: #555;
 }
 
 .Navigation-display-none {
-	display: none;
+  display: none;
 }
