--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -10,7 +10,7 @@
 }
 
 .ServerMember-sidebar {
-  width: 230px;
+  width: 240px;
   height: 100vh;
   box-sizing: border-box;
   background-color: #36393f;
@@ -21,7 +21,7 @@
 .ServerMember-content {
   background-color: #303136;
   height: calc(100% - 48px);
-  width: 230px;
+  width: 100%;
   overflow-y: auto;
 }
 
