--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -16,9 +16,11 @@
   background-color: #36393f;
   display: flex;
   flex-direction: column;
+  user-select: none;
 }
 
 .ServerMember-content {
+  margin-top: 1px;
   display: flex;
   flex-direction: column;
   background-color: #303136;
