Changed styling on member role tags

--- a/react-app/src/components/ServerMembers/MemberPage.css
+++ b/react-app/src/components/ServerMembers/MemberPage.css
@@ -75,12 +75,12 @@
     padding: 5px 0;
     height: 75px;
 }
-  
+
 .member-h4  {
     text-transform: uppercase;
     color: #fff;
     font-size: 13px;
-    padding: 5px 0;    
+    padding: 5px 0;
 }
 
 .member-role-div {
@@ -88,17 +88,77 @@
     flex-direction: row;
     color: white;
     font-size: 14px;
+    /* border-radius: 4px; */
+    /* padding: 2px 6px; */
+    box-sizing: border-box;
+    width: max-content;
+    justify-content: flex-start;
+    align-items: center;
+    /* background-color: #282b2f; */
+    gap: 4px;
+}
+
+#owner.member-role-div,
+#member.member-role-div,
+#pending.member-role-div {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-size: 14px;
+    /* border-radius: 4px; */
+    /* padding: 2px 6px; */
+    box-sizing: border-box;
+    width: max-content;
+    justify-content: flex-start;
+    align-items: center;
+    /* background-color: #282b2f; */
+    gap: 4px;
+}
+
+.member-role-container {
+    border-radius: 4px;
+    background-color: #282b2f;
+    padding: 3px 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+}
+
+.member-role-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+}
+
+#owner.member-role-circle,
+#admin.member-role-circle {
+    background-color: rgb(25, 188, 155);
+}
+
+#member.member-role-circle {
+    background-color: rgb(196, 122, 228);
+}
+
+#pending.member-role-circle {
+    background-color: rgb(255, 255, 255);
 }
 
 .member-role {
-    padding-right: 5px;
+    /* padding-right: 5px; */
+    padding-bottom: 1px;
+    font-size: 14px;
 }
 
 .role-edit-button {
+    border-radius: 4px;
+    background-color: #282b2f;
+    padding: 2px 8px;
     cursor: pointer;
     font-size: 16px;
 	/* background-color: #292b2f; */
-    padding: 0 5px;
+    /* padding: 0 5px; */
+    /* padding-bottom: 1px; */
 }
 
 .role-edit-button:hover {
