--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -3,7 +3,14 @@
   height: 100%;
   display: flex;
   flex-direction: row;
+}
+
+#dark.UserLanding-container {
   background-color: #36393f;
+}
+
+#light.UserLanding-container {
+  background-color: #ffffff;
 }
 
 .reverse {
@@ -108,12 +115,6 @@
   width: 32px;
   text-align: center;
   border-radius: 50%;
-}
-
-.UserLanding-sidebar {
-  width: 240px;
-  height: 100vh;
-  background-color: #303136;
 }
 
 .UserLanding-header {
