--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -12,7 +12,7 @@
   user-select: none;
 }
 
-#dark.UserLanding-sidebar {
+#light.UserLanding-sidebar {
   background-color: #f2f3f5;
 }
 
@@ -30,7 +30,7 @@
     0 1.5px 0 hsl(240 7.7% 2.5%/0.05), 0 2px 0 hsl(240 11.1% 1.8%/0.05);
 }
 
-#dark.UserLanding-sidebar-header {
+#light.UserLanding-sidebar-header {
   color: black;
 }
 
@@ -49,7 +49,7 @@
   align-items: center;
 }
 
-#dark.UserLanding-sidebar-channel-category-container {
+#light.UserLanding-sidebar-channel-category-container {
   color: #5e6772;
 }
 
@@ -117,7 +117,7 @@ a.UserLanding-sidebar-channel-name {
   border-radius: 4px;
 }
 
-#dark.UserLanding-sidebar-channel-name.active {
+#light.UserLanding-sidebar-channel-name.active {
   color: #303031;
   background-color: #d1d5da;
 }
@@ -127,7 +127,7 @@ a.UserLanding-sidebar-channel-name {
   border-radius: 4px;
 }
 
-#dark.UserLanding-sidebar-channel-name:hover {
+#light.UserLanding-sidebar-channel-name:hover {
   background-color: #d1d5da;
 }
 
@@ -153,7 +153,7 @@ a.UserLanding-sidebar-channel-name {
   justify-content: space-between;
 }
 
-#dark.UserLanding-sidebar-channel-user-info {
+#light.UserLanding-sidebar-channel-user-info {
   background-color: #ebedef;
 }
 
@@ -191,7 +191,7 @@ a.UserLanding-sidebar-channel-name {
   color: #ffffff;
 }
 
-#dark.UserLanding-sidebar-channel-user-name {
+#light.UserLanding-sidebar-channel-user-name {
   color: #060607;
 }
 
