--- a/react-app/src/components/ServerMembers/ServerMembers.css
+++ b/react-app/src/components/ServerMembers/ServerMembers.css
@@ -89,9 +89,16 @@
 .total-members {
   font-size: 12px;
   text-transform: uppercase;
-  color: rgba(211, 212, 214, 0.8);
   margin-top: 20px;
   margin-left: 10px;
+}
+
+#dark.total-members {
+  color: rgba(211, 212, 214, 0.8);
+}
+
+#light.total-members {
+  color: #5c5e66;
 }
 
 /* h2 {
@@ -128,51 +135,62 @@
   border: none;
 }
 
-#owner.individual-person button {
+#dark #owner.individual-person button {
   /* color: rgb(103, 223, 147); */
   color: rgb(25, 188, 155);
 }
 
-#admin.individual-person button {
+#dark #admin.individual-person button {
   /* color: rgb(103, 223, 147); */
   color: rgb(25, 188, 155);
 }
 
-#member.individual-person button {
+#light #owner.individual-person button {
+  color: #49c193;
+}
+
+#light #admin.individual-person button {
+  color: #49c193;
+}
+
+#dark #member.individual-person button {
   color: rgb(196, 122, 228);
 }
 
-#pending.individual-person button {
+#light #member.individual-person button {
+  color: #9b59b6;
+}
+
+#dark #pending.individual-person button {
   color: white;
 }
 
-#owner.individual-person button:hover {
-  /* color: rgb(103, 223, 147); */
-  color: rgb(25, 188, 155);
+#light #pending.individual-person button {
+  color: #5c5e66;
+}
+
+/* #owner.individual-person button:hover {
   background-color: #3f434a;
 }
 
 #admin.individual-person button:hover {
-  /* color: rgb(103, 223, 147); */
-  color: rgb(25, 188, 155);
   background-color: #3f434a;
 }
 
 #member.individual-person button:hover {
-  color: rgb(196, 122, 228);
   background-color: #3f434a;
 }
 
 #pending.individual-person button:hover {
-  color: white;
   background-color: #3f434a;
-}
+} */
 
-.individual-person button:hover {
+/* #dddee2 */
+/* .individual-person button:hover {
   background-color: #3f434a;
   filter: brightness(1);
   cursor: pointer;
-}
+} */
 
 .visible {
   position: absolute;
@@ -198,8 +216,14 @@
   width: 205px;
 }
 
-.individual-person:hover {
+#dark .individual-person:hover {
   background-color: #3f434a;
+  filter: brightness(1);
+  cursor: pointer;
+}
+
+#light .individual-person:hover {
+  background-color: #dddee2;
   filter: brightness(1);
   cursor: pointer;
 }
@@ -238,7 +262,14 @@
   font-weight: normal;
   text-transform: uppercase;
   font-size: 11px;
+}
+
+#dark.ServerMembers-headers {
   color: rgb(211, 212, 214, 0.8);
+}
+
+#light.ServerMembers-headers {
+  color: #5c5e66;
 }
 
 h2 {
