--- a/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
+++ b/react-app/src/components/ChannelMessages/CMIndex/CMIndex.css
@@ -113,7 +113,7 @@
 	border-radius: 6px;
 	margin: 10px 0px;
 	margin-right: 5px;
-	width: 100%;
+	width: calc(100%-40px);
 }
 
 .cms-msg-header {
@@ -233,6 +233,7 @@
 .img-link {
 	width: 40px;
 	height: 40px;
+	aspect-ratio: 1;
 	object-fit: cover;
 	border-radius: 9999px;
 }
