--- a/react-app/src/components/MainPage/MainPage.css
+++ b/react-app/src/components/MainPage/MainPage.css
@@ -3,7 +3,11 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-	background-color: #36393f;
+  background-color: #36393f;
   /* overflow-y: hidden; */
   /* box-sizing: border-box; */
+}
+
+#light.MainPage-container {
+  background-color: white;
 }
