--- a/react-app/src/components/UserLanding/UserLanding.css
+++ b/react-app/src/components/UserLanding/UserLanding.css
@@ -59,6 +59,10 @@
   margin: 0px 26px;
 }
 
+#light.UserLanding-people-list {
+  border-top: 1px solid #e7e8ea;
+}
+
 .UserLanding-people-list:hover {
   background-color: #3f434a;
   border-radius: 5px;
@@ -91,6 +95,10 @@
   color: white;
   font-weight: bold;
   font-size: 15px;
+}
+
+#light.UserLanding-user-name {
+  color: #060607;
 }
 
 .UserLanding-user-status {
