--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -50,6 +50,10 @@
     /* border-radius: 12px; */
 }
 
+#modal-content {
+    background-color: #ffffff;
+}
+
 
 #menu-modal-content {
     height: 100%;
