--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -39,7 +39,7 @@
 #modal-content {
     border-radius: 4px;
     position: absolute;
-    background-color: #35393e;
+    /* background-color: #35393e; */
     overflow-y: auto;
     max-height: 90%;
     height: max-content;
@@ -51,7 +51,8 @@
 }
 
 #modal-content {
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: none;
 }
 
 
