ying yang positioned

--- a/react-app/src/components/Channels/Channel.css
+++ b/react-app/src/components/Channels/Channel.css
@@ -92,6 +92,22 @@
   color: #b9bbbe;
 }
 
+.UserLanding-Sidebar-yingyang-dropdown {
+  z-index: 1;
+  background-color: black;
+  position: absolute;
+  top: -25px;
+  left: 125px;
+  box-shadow: 0 2px 16px rgb(0 0 0 / 12%);
+  border-radius: 3px;
+  width: 120px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-size: 14px;
+  color: #b9bbbe;
+}
+
 .UserLanding-Sidebar-user-dropdown-user-logout {
   cursor: pointer;
 }
