--- a/react-app/src/components/ServerMembers/NickNameEdit.css
+++ b/react-app/src/components/ServerMembers/NickNameEdit.css
@@ -17,9 +17,17 @@
 
 .save-nickName-button {
     border: none;
-    color: white;
-    background-color: rgb(24,25,28);
     font-family: "Roboto";
+}
+
+#dark.save-nickName-button {
+    background-color: rgb(24,25,28);
+    color: white;
+}
+
+#light.save-nickName-button {
+    background-color: #ffffff;
+    color: #060607;
 }
 
 .save-nickName-button {
