Add light theme to channel plus icon

--- a/react-app/src/components/UserLanding/UserLandingSideBar.css
+++ b/react-app/src/components/UserLanding/UserLandingSideBar.css
@@ -71,6 +71,10 @@
   font-size: 15px;
 }
 
+#light.align-right {
+  color: red;
+}
+
 .UserLanding-sidebar-channel-list {
   width: 100%;
   box-sizing: border-box;
