--- a/react-app/src/components/OpenModalButton/OpenModalButton.css
+++ b/react-app/src/components/OpenModalButton/OpenModalButton.css
@@ -7,12 +7,19 @@
 }
 
 .Create-Channel {
-  color: #ffffff;
   background: none;
   border: 0;
   font-size: 14px;
   margin-left: 8px;
   cursor: pointer;
+}
+
+#dark.OpenModalButton-button > div > .align-right {
+  color: #96989d;
+}
+
+#light.fa-solid.fa-plus.align-right {
+  color: #5e6772;
 }
 
 .Edit,
